--- a/examples/transformer/feast-enricher-transformer/Feast Enricher.ipynb
+++ b/examples/transformer/feast-enricher-transformer/Feast Enricher.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standard Transformer Example\n",
+    "# Feast Enricher Transformer Example\n",
     "\n",
-    "This notebook demonstrates how to deploy a PyFunc model and a standard transformer. The pyfunc model simply return the request from the transformer. While the transformer itself retrieve the feature from Feast server."
+    "This notebook demonstrates how to deploy a PyFunc model and a feast enricher transformer. The pyfunc model simply return the request from the transformer. While the transformer itself only retrieve the feature from Feast server to be used to enricher the incoming request input."
    ]
   },
   {
@@ -20,7 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mYou are using pip version 19.0.3, however version 21.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install --upgrade -r requirements.txt > /dev/null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12.2\n"
+     ]
+    }
+   ],
    "source": [
     "import merlin\n",
     "print(merlin.__version__)\n",
     "\n",
-    "MERLIN_URL = \"merlin-api-url\"\n",
+    "MERLIN_URL = \"<MERLIN_HOST>/api/merlin\"\n",
     "\n",
     "merlin.set_url(MERLIN_URL)"
    ]
@@ -69,9 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ariefrahmansyah/.pyenv/versions/3.7.3/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n"
+     ]
+    }
+   ],
    "source": [
     "PROJECT_NAME = \"sample\"\n",
     "\n",
@@ -95,13 +130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from merlin.model import ModelType\n",
     "\n",
-    "MODEL_NAME = \"pyfunc-standard-transfo\"\n",
+    "MODEL_NAME = \"feast-enricher\"\n",
     "\n",
     "merlin.set_model(MODEL_NAME, ModelType.PYFUNC)"
    ]
@@ -129,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,26 +191,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lat': -6.2335, 'lon': 106.8022, 'details': '{\"merchant_id\": 542958066}'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m = StandardModel()\n",
     "m.initialize({})\n",
     "m.infer(\n",
-    "    {\n",
-    "    \"merchants\": [\n",
-    "        {\n",
-    "            \"id\" : \"M111\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M222\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M333\"\n",
-    "        }\n",
-    "    ]\n",
-    "    }\n",
+    "   {\n",
+    "        \"lat\": -6.2335,\n",
+    "        \"lon\": 106.8022,     \n",
+    "        \"details\":\"{\\\"merchant_id\\\": 542958066}\"\n",
+    "   }\n",
     ")"
    ]
   },
@@ -188,34 +226,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lat': -6.2335,\n",
+       " 'lon': 106.8022,\n",
+       " 'details': '{\"merchant_id\": 542958066}',\n",
+       " 'feast_features': {'location_geohash': {'columns': ['location_geohash',\n",
+       "    'poi_geohash:total',\n",
+       "    'poi_geohash:ppoi'],\n",
+       "   'data': [['qqguw34zpxkkh', 3, 15]]},\n",
+       "  'merchant_id': {'columns': ['merchant_id',\n",
+       "    'merchant_ratings:average_rating',\n",
+       "    'merchant_ratings:total_ratings'],\n",
+       "   'data': [['542958066', 4, 4]]}}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m.infer(\n",
     "    {\n",
-    "        \"merchants\": [\n",
-    "        {\n",
-    "            \"id\" : \"M111\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M222\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M333\"\n",
-    "        }\n",
-    "    ], \n",
-    "        # feast_features will be populated by standard transformer\n",
-    "        \"feast_features\": {\n",
-    "          \"merchant_id\" : {\n",
-    "            \"columns\": [\n",
-    "                \"merchant_id\",\n",
-    "                \"merchant_discovery:delivery_time_estimate\"\n",
-    "            ],\n",
-    "            \"data\": [[\"M111\", 10],[\"M222\", 20],[\"M333\", 30], ]\n",
-    "          }\n",
-    "        }\n",
+    "  \"lat\": -6.2335,\n",
+    "  \"lon\": 106.8022,      \n",
+    "  \"details\":\"{\\\"merchant_id\\\": 542958066}\",\n",
+    "  \"feast_features\": {\n",
+    "      \"location_geohash\" : {\n",
+    "        \"columns\": [\n",
+    "            \"location_geohash\",\n",
+    "            \"poi_geohash:total\",\n",
+    "            \"poi_geohash:ppoi\"\n",
+    "        ],\n",
+    "        \"data\": [[\"qqguw34zpxkkh\", 3, 15]]\n",
+    "    },\n",
+    "    \"merchant_id\" : {\n",
+    "        \"columns\": [\n",
+    "            \"merchant_id\",\n",
+    "            \"merchant_ratings:average_rating\",\n",
+    "            \"merchant_ratings:total_ratings\"\n",
+    "        ],\n",
+    "        \"data\": [[\"542958066\", 4, 4]]\n",
+    "      },\n",
     "    }\n",
+    "}\n",
+    "\n",
     ")"
    ]
   },
@@ -269,13 +329,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021/06/23 05:40:37 WARNING mlflow.models.model: Logging model metadata to the tracking server has failed, possibly due older server version. The model artifacts have been logged successfully under gs://<MERLIN_BUCKET>/mlflow/903/fb38f1135a5f43febc61c32af384b20b/artifacts. In addition to exporting model artifacts, MLflow clients 1.7.0 and above attempt to record model metadata to the  tracking store. If logging to a mlflow server via REST, consider  upgrading the server version to MLflow 1.7.0 or above.\n"
+     ]
+    }
+   ],
    "source": [
-    "with merlin.new_model_version() as v:    \n",
+    "with merlin.new_model_version(labels={\"service_type\": \"GO-RIDE\", \"date\": \"2021-06-23\"}) as v:    \n",
     "    merlin.log_pyfunc_model(model_instance=StandardModel(),\n",
-    "                            conda_env=\"standard_transformer_env.yaml\",\n",
+    "                            conda_env=\"env.yaml\",\n",
     "                            artifacts={})"
    ]
   },
@@ -290,25 +358,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "transformerConfig:\n",
+      " feast:\n",
+      "  - project: default\n",
+      "    entities:\n",
+      "    - name: location_geohash\n",
+      "      valueType: STRING\n",
+      "      udf: Geohash(\"$.lat\", \"$.lon\", 7)\n",
+      "    features:\n",
+      "    - name: poi_geohash:total\n",
+      "      valueType: DOUBLE\n",
+      "      defaultValue: \"0\"\n",
+      "    - name: poi_geohash:ppoi\n",
+      "      valueType: DOUBLE\n",
+      "      defaultValue: \"0\"\n",
+      "  - project: default \n",
+      "    entities:\n",
+      "      - name: merchant_id\n",
+      "        valueType: STRING\n",
+      "        udf: JsonExtract(\"$.details\", \"$.merchant_id\")\n",
+      "    features:\n",
+      "    - name: merchant_ratings:average_rating\n",
+      "      valueType: DOUBLE\n",
+      "      defaultValue: \"0\"\n",
+      "    - name: merchant_ratings:total_ratings\n",
+      "      valueType: INT64\n",
+      "      defaultValue: \"0\"\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ariefrahmansyah/.pyenv/versions/3.7.3/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n"
+     ]
+    }
+   ],
    "source": [
-    "!cat \"standard_transformer_config.yaml\""
+    "!cat \"feast_enricher_config.yaml\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Deploying model feast-enricher version 1\n",
+      "0% [##############################] 100% | ETA: 00:00:00"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model feast-enricher version 1 is deployed.\n",
+      "View model version logs: http://<MERLIN_HOST>/merlin/projects/1/models/900/versions/1/endpoints/1d169198-e8b4-473c-8eae-fca98775cdf2/logs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total time elapsed: 00:03:34\n"
+     ]
+    }
+   ],
    "source": [
     "from merlin.resource_request import ResourceRequest\n",
     "from merlin.transformer import StandardTransformer\n",
     "from merlin.logger import Logger, LoggerConfig, LoggerMode\n",
     "\n",
     "# Create a transformer object and its resources requests\n",
-    "transformer_config_path = \"standard_transformer_config.yaml\"\n",
+    "transformer_config_path = \"feast_enricher_config.yaml\"\n",
     "transformer = StandardTransformer(config_file=transformer_config_path,\n",
     "                                  enabled=True)\n",
     "\n",
@@ -325,27 +460,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"lat\": -6.2335,\n",
+      "  \"lon\": 106.8022,\n",
+      "  \"details\": \"{\\\"merchant_id\\\": 54295}\",\n",
+      "  \"feast_features\": {\n",
+      "    \"location_geohash\": {\n",
+      "      \"columns\": [\n",
+      "        \"location_geohash\",\n",
+      "        \"poi_geohash:total\",\n",
+      "        \"poi_geohash:ppoi\"\n",
+      "      ],\n",
+      "      \"data\": [\n",
+      "        [\n",
+      "          \"qqguw34\",\n",
+      "          0,\n",
+      "          0\n",
+      "        ]\n",
+      "      ]\n",
+      "    },\n",
+      "    \"merchant_id\": {\n",
+      "      \"columns\": [\n",
+      "        \"merchant_id\",\n",
+      "        \"merchant_ratings:average_rating\",\n",
+      "        \"merchant_ratings:total_ratings\"\n",
+      "      ],\n",
+      "      \"data\": [\n",
+      "        [\n",
+      "          \"54295\",\n",
+      "          0,\n",
+      "          0\n",
+      "        ]\n",
+      "      ]\n",
+      "    }\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
+    "import json\n",
     "import requests\n",
     "\n",
     "resp = requests.post(endpoint.url, json={\n",
-    "    \"merchants\": [\n",
-    "        {\n",
-    "            \"id\" : \"M111\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M222\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M333\"\n",
-    "        }\n",
-    "    ]\n",
-    "    }\n",
-    ")\n",
-    "resp.text"
+    "  \"lat\": -6.2335,\n",
+    "  \"lon\": 106.8022,      \n",
+    "  \"details\":\"{\\\"merchant_id\\\": 54295}\"\n",
+    "})\n",
+    "pretty_json = json.loads(resp.text)\n",
+    "print (json.dumps(pretty_json, indent=2))"
    ]
   },
   {
@@ -364,9 +534,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting deployment of model feast-enricher version 1 from enviroment id-staging\n"
+     ]
+    }
+   ],
    "source": [
     "merlin.undeploy(v)"
    ]
